--- a/gatsby-theme-mds/src/css/style.css
+++ b/gatsby-theme-mds/src/css/style.css
@@ -3,3 +3,20 @@
   top: 0;
   align-self: flex-start;
 }
+
+@keyframes fadeInAnimation {
+  0% {
+      opacity: 0.25;
+      margin-top: 2px;
+  }
+  100% {
+      opacity: 1;
+      margin-top: 0;
+   }
+}
+
+.page-animation {
+  animation: fadeInAnimation ease 0.5s;
+  animation-iteration-count: 1;
+  animation-fill-mode: forwards;
+}
